# BlackStory_IA

./: .env.example  .gitignore  README.md  ejemplo_ejecucion  game_prompts.py  main.py  pyproject.toml
Prompt_programa/: Promp_Inicio.txt
ai_providers/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
